Add gallery slider, contact CTA section, and update gallery page with hero section

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <!-- External stylesheet -->
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="about-page">
 
   <!-- NAVBAR -->
   <header class="navbar" >
@@ -48,6 +48,22 @@
       </div>
   </section>
 
+ <!-- PHILOSOPHY SECTION -->
+ <section class="philosophy-section">
+  <div class="page">
+    <div class="philosophy-content">
+      <div class="philosophy-kicker">FILOZOFIJA</div>
+      <div class="philosophy-quote">
+        <p>U kuhinji stvaramo više od hrane, svaki zalogaj nosi emociju, a svako jelo priča priču o <span class="typewriter-text"></span></p>
+      </div>
+      <div class="philosophy-attribution">
+        <div class="philosophy-name">Tomislav Mašić</div>
+        <div class="philosophy-role">Direktor</div>
+      </div>
+    </div>
+  </div>
+</section>
+
   <!-- ABOUT US SECTION -->
   <div class="page">
     <section class="about-us-section">
@@ -78,6 +94,8 @@
       </div>
     </section>
   </div>
+  
+
 
   <!-- WHY CHOOSE US SECTION -->
   <div class="page">
@@ -142,25 +160,120 @@
     </section>
   </div>
 
-  <!-- PHILOSOPHY SECTION -->
-  <section class="philosophy-section">
+   <!-- CONTACT CTA SECTION -->
+   <section class="contact-cta-section">
     <div class="page">
-      <div class="philosophy-content">
-        <div class="philosophy-kicker">FILOZOFIJA</div>
-        <div class="philosophy-quote">
-          <p>U kuhinji stvaramo više od hrane, svaki zalogaj nosi emociju, a svako jelo priča priču o <span class="typewriter-text"></span></p>
+      <div class="contact-cta-content">
+        <div class="contact-cta-kicker">KONTAKT</div>
+        <h2 class="contact-cta-title">Nismo zlatna ribica, ali ostvariti ćemo Vam sve želje!</h2>
+        <a href="index.html#kontakt">
+          <button class="contact-cta-button">Let's Talk</button>
+        </a>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- GALLERY SLIDER SECTION -->
+  <section class="gallery-slider-section">
+    <div class="gallery-slider-container">
+      <div class="gallery-slider-track" id="gallery-slider-track">
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-54.avif" type="image/avif" />
+            <img src="image/Gableraj-54.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
         </div>
-        <div class="philosophy-attribution">
-          <div class="philosophy-name">Tomislav Mašić</div>
-          <div class="philosophy-role">Direktor</div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-117.avif" type="image/avif" />
+            <img src="image/Gableraj-117.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-114.avif" type="image/avif" />
+            <img src="image/Gableraj-114.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-38.avif" type="image/avif" />
+            <img src="image/Gableraj-38.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-113.avif" type="image/avif" />
+            <img src="image/Gableraj-113.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-137.avif" type="image/avif" />
+            <img src="image/Gableraj-137.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-103.avif" type="image/avif" />
+            <img src="image/Gableraj-103.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-172.avif" type="image/avif" />
+            <img src="image/Gableraj-172.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-173.avif" type="image/avif" />
+            <img src="image/Gableraj-173.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-46.avif" type="image/avif" />
+            <img src="image/Gableraj-46.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-68.avif" type="image/avif" />
+            <img src="image/Gableraj-68.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-83.avif" type="image/avif" />
+            <img src="image/Gableraj-83.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <!-- Duplicate items for seamless loop -->
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-54.avif" type="image/avif" />
+            <img src="image/Gableraj-54.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-117.avif" type="image/avif" />
+            <img src="image/Gableraj-117.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-114.avif" type="image/avif" />
+            <img src="image/Gableraj-114.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- ABOUT CONTENT -->
-
-
+ 
   
   <!-- FOOTER -->
   <footer class="footer">
