Add locations slider section with navigation, update wedding services slider, and improve animations

--- a/about.html
+++ b/about.html
@@ -25,7 +25,14 @@
     </div>
 
     <nav class="nav-center">
-      <a href="index.html#usluge" class="nav-link">Usluge</a>
+      <div class="nav-dropdown">
+        <a href="index.html#usluge" class="nav-link">Usluge <i class="fas fa-chevron-down"></i></a>
+        <div class="nav-dropdown-menu">
+          <a href="weddings.html" class="nav-dropdown-item">Vjenčanja</a>
+          <a href="index.html#usluge" class="nav-dropdown-item">Poslovni eventi</a>
+          <a href="index.html#usluge" class="nav-dropdown-item">Privatne zabave</a>
+        </div>
+      </div>
       <a href="galerija.html" class="nav-link">Galerija</a>
       <a href="about.html" class="nav-link active">O nama</a>
     </nav>
@@ -167,7 +174,7 @@
         <div class="contact-cta-kicker">KONTAKT</div>
         <h2 class="contact-cta-title">Nismo zlatna ribica, ali ostvariti ćemo Vam sve želje!</h2>
         <a href="index.html#kontakt">
-          <button class="contact-cta-button">Let's Talk</button>
+          <button class="contact-cta-button">Kontakt</button>
         </a>
       </div>
     </div>
