--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
     </div>
 
     <nav class="nav-center">
-      <a href="#usluge" class="nav-link active">Usluge</a>
+      <div class="nav-dropdown">
+        <a href="#usluge" class="nav-link active">Usluge <i class="fas fa-chevron-down"></i></a>
+        <div class="nav-dropdown-menu">
+          <a href="weddings.html" class="nav-dropdown-item">Vjenčanja</a>
+          <a href="#usluge" class="nav-dropdown-item">Poslovni eventi</a>
+          <a href="#usluge" class="nav-dropdown-item">Privatne zabave</a>
+        </div>
+      </div>
       <a href="galerija.html" class="nav-link">Galerija</a>
       <a href="about.html" class="nav-link">O nama</a>
     </nav>
