--- a/galerija.html
+++ b/galerija.html
@@ -25,7 +25,14 @@
     </div>
 
     <nav class="nav-center">
-      <a href="index.html#usluge" class="nav-link">Usluge</a>
+      <div class="nav-dropdown">
+        <a href="index.html#usluge" class="nav-link">Usluge <i class="fas fa-chevron-down"></i></a>
+        <div class="nav-dropdown-menu">
+          <a href="weddings.html" class="nav-dropdown-item">Vjenčanja</a>
+          <a href="index.html#usluge" class="nav-dropdown-item">Poslovni eventi</a>
+          <a href="index.html#usluge" class="nav-dropdown-item">Privatne zabave</a>
+        </div>
+      </div>
       <a href="galerija.html" class="nav-link active">Galerija</a>
       <a href="about.html" class="nav-link">O nama</a>
     </nav>
