Add locations slider navigation, contact CTA and gallery slider sections, fix scroll snap alignment

--- a/weddings.html
+++ b/weddings.html
@@ -192,9 +192,19 @@
               <div class="services-kicker">LOKACIJE</div>
               <h2 class="services-title">Klub Šumica</h2>
               <a href="https://www.klubsumica.com/" target="_blank" class="services-subtitle">Saznajte više</a>
+
+              <div class="locations-navigation">
+                <button class="locations-nav-btn locations-nav-prev" aria-label="Previous location">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="locations-nav-btn locations-nav-next" aria-label="Next location">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
+              </div>
+              
             </div>
             <div class="services-header-right">
-              Klub Šumica nudi elegantan prostor za vaše vjenčanje, smješten u prekrasnom prirodnom okruženju. Idealna lokacija za svečane proslave s kapacitetom za veliki broj gostiju. Naš tim osigurava besprijekornu organizaciju i vrhunski catering za vaš poseban dan.
+              Klub Šumica prostor je za vjenčanja elegantno uređen, a okružen je netaknutom prirodom. S kapacitetom od 200 sjedećih ili preko 300 stajaćih mjesta, ovaj prostor nudi funkcionalnost i udobnost. Naš tim osigurava besprijekornu organizaciju i nezaboravno gastronomsko iskustvo u srcu prirode.
             </div>
           </div>
           <div class="gallery-grid">
@@ -227,29 +237,37 @@
               <div class="services-kicker">LOKACIJE</div>
               <h2 class="services-title">Scatolina</h2>
               <a href="https://scatolina.hr/" target="_blank" class="services-subtitle">Saznajte više</a>
+              <div class="locations-navigation">
+                <button class="locations-nav-btn locations-nav-prev" aria-label="Previous location">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="locations-nav-btn locations-nav-next" aria-label="Next location">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
+              </div>
             </div>
             <div class="services-header-right">
-              Vila Velebita predstavlja luksuznu lokaciju za nezaboravna vjenčanja. Elegantni interijer i prekrasan vanjski prostor čine ovu vilu idealnim izborom za vaš poseban dan. Naš catering tim osigurava vrhunsku uslugu i besprijekornu organizaciju.
+              Scatolina se nalazi u istočnom dijelu Zagreba (Gornja Dubrava) okružena prekrasnom prirodom i očaravajućim pogledom. Unutrašnji dio kuće može ugostiti 70 uzvanika. Vanjski dio čine sjenica i uređeni prostor oko bazena koji također može ugostiti 70 gostiju tijekom sunčanih ljetnih dana.
             </div>
           </div>
           <div class="gallery-grid">
             <div class="gallery-main-item">
               <picture>
-                <source srcset="image/Gableraj-60.avif" type="image/avif" />
-                <img src="image/Gableraj-60.webp" alt="Wedding location" loading="lazy" />
+                <source srcset="image/Gableraj-183.avif" type="image/avif" />
+                <img src="image/Gableraj-183.webp" alt="Wedding location" loading="lazy" />
               </picture>
             </div>
             <div class="gallery-side-items">
               <div class="gallery-item">
                 <picture>
-                  <source srcset="image/Gableraj-47.avif" type="image/avif" />
-                  <img src="image/Gableraj-47.webp" alt="Wedding location" loading="lazy" />
+                  <source srcset="image/Gableraj-181.avif" type="image/avif" />
+                  <img src="image/Gableraj-181.webp" alt="Wedding location" loading="lazy" />
                 </picture>
               </div>
               <div class="gallery-item">
                 <picture>
-                  <source srcset="image/Gableraj-66.avif" type="image/avif" />
-                  <img src="image/Gableraj-66.webp" alt="Wedding location" loading="lazy" />
+                  <source srcset="image/Gableraj-182.avif" type="image/avif" />
+                  <img src="image/Gableraj-182.webp" alt="Wedding location" loading="lazy" />
                 </picture>
               </div>
             </div>
@@ -262,29 +280,37 @@
               <div class="services-kicker">LOKACIJE</div>
               <h2 class="services-title">Medvedgrad</h2>
               <a href="https://medvedgrad.hr/najam/" target="_blank" class="services-subtitle">Saznajte više</a>
+              <div class="locations-navigation">
+                <button class="locations-nav-btn locations-nav-prev" aria-label="Previous location">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="locations-nav-btn locations-nav-next" aria-label="Next location">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
+              </div>
             </div>
             <div class="services-header-right">
-              Hotel Bellevue nudi moderan i sofisticiran prostor za vaše vjenčanje. S prekrasnim pogledom i elegantnim salama, ova lokacija osigurava nezaboravan doživljaj. Naš tim pruža kompletnu catering uslugu prilagođenu vašim željama.
+              Uzdižući se iznad Zagreba, u zagrljaju stoljetnih šuma Medvednice, Medvedgrad nudi neponovljivu povijesnu kulisu za vaša najekskluzivnija događanja. Ova autentična srednjovjekovna utvrda transformirana je u spektakularnu pozornicu gdje se mistika prošlosti susreće s vrhunskom organizacijom modernih svečanosti.  Medvedgrad pruža atmosferu privatnosti i grandioznosti koju je nemoguće kopirati.
             </div>
           </div>
           <div class="gallery-grid">
             <div class="gallery-main-item">
               <picture>
-                <source srcset="image/Gableraj-47.avif" type="image/avif" />
-                <img src="image/Gableraj-47.webp" alt="Wedding location" loading="lazy" />
+                <source srcset="image/Gableraj-184.avif" type="image/avif" />
+                <img src="image/Gableraj-184.webp" alt="Wedding location" loading="lazy" />
               </picture>
             </div>
             <div class="gallery-side-items">
               <div class="gallery-item">
                 <picture>
-                  <source srcset="image/Gableraj-175.avif" type="image/avif" />
-                  <img src="image/Gableraj-175.webp" alt="Wedding location" loading="lazy" />
+                  <source srcset="image/Gableraj-185.avif" type="image/avif" />
+                  <img src="image/Gableraj-185.webp" alt="Wedding location" loading="lazy" />
                 </picture>
               </div>
               <div class="gallery-item">
                 <picture>
-                  <source srcset="image/Gableraj-60.avif" type="image/avif" />
-                  <img src="image/Gableraj-60.webp" alt="Wedding location" loading="lazy" />
+                  <source srcset="image/Gableraj-186.avif" type="image/avif" />
+                  <img src="image/Gableraj-186.webp" alt="Wedding location" loading="lazy" />
                 </picture>
               </div>
             </div>
@@ -297,29 +323,37 @@
               <div class="services-kicker">LOKACIJE</div>
               <h2 class="services-title">Klub Kornel</h2>
               <a href="https://www.klubkornel.com/" target="_blank" class="services-subtitle">Saznajte više</a>
+              <div class="locations-navigation">
+                <button class="locations-nav-btn locations-nav-prev" aria-label="Previous location">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="locations-nav-btn locations-nav-next" aria-label="Next location">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
+              </div>
             </div>
             <div class="services-header-right">
-              Dvorac Trakošćan pruža povijesnu i romantičnu atmosferu za vaše vjenčanje. Ova jedinstvena lokacija kombinira ljepotu prošlosti s modernim catering uslugama. Naš tim osigurava besprijekornu organizaciju i vrhunsku kulinarsku ponudu.
+              Skriven u zagrljaju zelinskih vinograda, Klub Kornel spaja luksuznu privatnost s autentičnim ruralnim šarmom. Uz vrhunsku tehničku opremljenost i sofisticiran interijer, ovaj prostor pruža idealnu atmosferu za ekskluzivna događanja, gdje naš tim jamči personalizirano iskustvo prožeto mirom i elegancijom.
             </div>
           </div>
           <div class="gallery-grid">
             <div class="gallery-main-item">
               <picture>
-                <source srcset="image/Gableraj-175.avif" type="image/avif" />
-                <img src="image/Gableraj-175.webp" alt="Wedding location" loading="lazy" />
+                <source srcset="image/Gableraj-189.avif" type="image/avif" />
+                <img src="image/Gableraj-189.webp" alt="Wedding location" loading="lazy" />
               </picture>
             </div>
             <div class="gallery-side-items">
               <div class="gallery-item">
                 <picture>
-                  <source srcset="image/Gableraj-66.avif" type="image/avif" />
-                  <img src="image/Gableraj-66.webp" alt="Wedding location" loading="lazy" />
+                  <source srcset="image/Gableraj-188.avif" type="image/avif" />
+                  <img src="image/Gableraj-188.webp" alt="Wedding location" loading="lazy" />
                 </picture>
               </div>
               <div class="gallery-item">
                 <picture>
-                  <source srcset="image/Gableraj-47.avif" type="image/avif" />
-                  <img src="image/Gableraj-47.webp" alt="Wedding location" loading="lazy" />
+                  <source srcset="image/Gableraj-187.avif" type="image/avif" />
+                  <img src="image/Gableraj-187.webp" alt="Wedding location" loading="lazy" />
                 </picture>
               </div>
             </div>
@@ -332,43 +366,154 @@
               <div class="services-kicker">LOKACIJE</div>
               <h2 class="services-title">Druge lokacije</h2>
               <a href="#" class="services-subtitle">Lokacija po vašem odabiru</a>
+              <div class="locations-navigation">
+                <button class="locations-nav-btn locations-nav-prev" aria-label="Previous location">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="locations-nav-btn locations-nav-next" aria-label="Next location">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
+              </div>
             </div>
             <div class="services-header-right">
-              Zagrebačka Arena nudi prostrane i moderne prostore za velika vjenčanja. S kapacitetom za veliki broj gostiju, ova lokacija idealna je za spektakularne proslave. Naš catering tim osigurava vrhunsku uslugu za vaš poseban dan.
+              Bilo da je riječ o privatnom vrtu, poslovnom prostoru ili šatoru na otvorenom, naš tim transformira bilo koji ambijent u ekskluzivnu banketnu destinaciju. Donosimo kompletnu logistiku i vrhunsko gastronomsko iskustvo izravno k vama, osiguravajući da kvaliteta usluge i profinjenost okusa ostanu beskompromisni, bez obzira na adresu koju odaberete.
             </div>
           </div>
           <div class="gallery-grid">
             <div class="gallery-main-item">
               <picture>
-                <source srcset="image/Gableraj-66.avif" type="image/avif" />
-                <img src="image/Gableraj-66.webp" alt="Wedding location" loading="lazy" />
+                <source srcset="image/Gableraj-190.avif" type="image/avif" />
+                <img src="image/Gableraj-190.webp" alt="Wedding location" loading="lazy" />
               </picture>
             </div>
             <div class="gallery-side-items">
               <div class="gallery-item">
                 <picture>
-                  <source srcset="image/Gableraj-60.avif" type="image/avif" />
-                  <img src="image/Gableraj-60.webp" alt="Wedding location" loading="lazy" />
+                  <source srcset="image/Gableraj-191.avif" type="image/avif" />
+                  <img src="image/Gableraj-191.webp" alt="Wedding location" loading="lazy" />
                 </picture>
               </div>
               <div class="gallery-item">
                 <picture>
-                  <source srcset="image/Gableraj-175.avif" type="image/avif" />
-                  <img src="image/Gableraj-175.webp" alt="Wedding location" loading="lazy" />
+                  <source srcset="image/Gableraj-192.avif" type="image/avif" />
+                  <img src="image/Gableraj-192.webp" alt="Wedding location" loading="lazy" />
                 </picture>
               </div>
             </div>
           </div>
         </div>
       </div>
-      
-      <div class="locations-navigation">
-        <button class="locations-nav-btn locations-nav-prev" aria-label="Previous location">
-          <i class="fas fa-chevron-left"></i>
-        </button>
-        <button class="locations-nav-btn locations-nav-next" aria-label="Next location">
-          <i class="fas fa-chevron-right"></i>
-        </button>
+    </div>
+  </section>
+
+  <!-- CONTACT CTA SECTION -->
+  <section class="contact-cta-section">
+    <div class="page">
+      <div class="contact-cta-content">
+        <div class="contact-cta-kicker">KONTAKT</div>
+        <h2 class="contact-cta-title">Nismo zlatna ribica, ali ostvariti ćemo Vam sve želje!</h2>
+        <a href="index.html#kontakt">
+          <button class="contact-cta-button">Kontakt</button>
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- GALLERY SLIDER SECTION -->
+  <section class="gallery-slider-section">
+    <div class="gallery-slider-container">
+      <div class="gallery-slider-track" id="gallery-slider-track">
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-54.avif" type="image/avif" />
+            <img src="image/Gableraj-54.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-117.avif" type="image/avif" />
+            <img src="image/Gableraj-117.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-114.avif" type="image/avif" />
+            <img src="image/Gableraj-114.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-38.avif" type="image/avif" />
+            <img src="image/Gableraj-38.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-113.avif" type="image/avif" />
+            <img src="image/Gableraj-113.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-137.avif" type="image/avif" />
+            <img src="image/Gableraj-137.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-103.avif" type="image/avif" />
+            <img src="image/Gableraj-103.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-172.avif" type="image/avif" />
+            <img src="image/Gableraj-172.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-173.avif" type="image/avif" />
+            <img src="image/Gableraj-173.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-46.avif" type="image/avif" />
+            <img src="image/Gableraj-46.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-68.avif" type="image/avif" />
+            <img src="image/Gableraj-68.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-83.avif" type="image/avif" />
+            <img src="image/Gableraj-83.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <!-- Duplicate items for seamless loop -->
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-54.avif" type="image/avif" />
+            <img src="image/Gableraj-54.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-117.avif" type="image/avif" />
+            <img src="image/Gableraj-117.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
+        <div class="gallery-slider-item">
+          <picture>
+            <source srcset="image/Gableraj-114.avif" type="image/avif" />
+            <img src="image/Gableraj-114.webp" alt="Catering Gableraj" loading="lazy" />
+          </picture>
+        </div>
       </div>
     </div>
   </section>
